--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ favicon: 'assets/images/favicon.ico'
 author: Sal
 paginate: 30
 disqus: 'nasa_stranka'
-locale: en_us
-lang: en_us
+locale: sk_SK
+lang: sk_sk
 feed_items: 10
 feed_update_period: daily
 feed_update_frequency: 1
