--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: "HK UPJS Kosice"
+title: "HK UPJŠ Košice"
 email: hkupjske@gmail.com
 timezone: UTC
-baseurl: "/affiliates-jekyll-theme"
+baseurl: "/horolezciUPJSke"
 permalink: "/:title/"
 logo: 'assets/images/logo-m.png'
-favicon: 'assets/images/favicon.ico'
+#favicon: 'assets/images/favicon.ico'
 author: Sal
 paginate: 30
 disqus: 'nasa_stranka'
@@ -20,28 +20,11 @@ kramdown:
 sass:
   sass_dir: _sass
   style: :compressed
-ganalytics: UA-113961478-1
+ganalytics: 
 
-# Authors
-authors:
-  sal:
-    name: Sal
-    display_name: Sal
-    avatar: 'assets/images/sal.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net/category/jekyll-themes/
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Affiliates, a template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John
-    avatar: 'assets/images/john.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net/category/jekyll-themes/
-    twitter: https://twitter.com/wowthemesnet
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Affiliates theme demo, a Jekyll template compatible with Github pages."
+imagesurl: "/horolezciUPJSke/img/"
+thumbsurl: "/horolezciUPJSke/thumbs/"
 
-# Social
 social:
   instagram: https://www.instagram.com/hkupjske/
   facebook: https://www.facebook.com/HKupjsKE/
