--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ sass:
   style: :compressed
 ganalytics: 
 
-imagesurl: "/horolezciUPJSke/img/"
-thumbsurl: "/horolezciUPJSke/thumbs/"
+imagesurl: "/horolezciUPJSke/galery/"
+thumbsurl: "/horolezciUPJSke/galery/"
 
 social:
   instagram: https://www.instagram.com/hkupjske/
