--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "HK UPJŠ Košice"
 email: hkupjske@gmail.com
 timezone: UTC
-baseurl: "/"
+baseurl: ""
 permalink: "/:title/"
 logo: 'assets/images/logo-m.png'
 favicon: 'assets/images/climbing-48.ico'
